Fix: Size of carousel on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ h3 {
 
 .abc-edi {
     margin-top: 20px;
-    padding: 20px;
+    padding: 0;
     background-color: black;
 }
 
@@ -205,8 +205,8 @@ h3 {
 /* Carousel */
 #carouselExample {
     margin-top: 20px;
-    border: 2px solid var(--highlight-color);
-    width: 70%;
+    border: 5px solid var(--highlight-color);
+    width: 100%;
     max-height: 80vh;
     margin-left: auto;
     margin-right: auto;
